removed eraser png ambiguity

--- a/week-22/draw-app/apps/excaildraw-frontend/app/globals.css
+++ b/week-22/draw-app/apps/excaildraw-frontend/app/globals.css
@@ -1,5 +1,5 @@
 @import "tailwindcss";
 
-canvas.eraser-cursor {
+/* canvas.eraser-cursor {
     cursor: url('/eraser-cursor.png') , auto;
-  }
+  } */
